--- a/client/angular.json
+++ b/client/angular.json
@@ -28,6 +28,7 @@
               "node_modules//bootstrap/dist/css/bootstrap.min.css",
               "node_modules/font-awesome/css/font-awesome.min.css",
               "node_modules/bootswatch/dist/yeti/bootstrap.css",
+              "node_modules/ngx-spinner/animations/line-scale-party.css",
               "node_modules/ngx-toastr/toastr.css",
               "src/styles.css"
             ],
