--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "@angular/common": "^18.2.5",
     "@angular/compiler": "^18.2.5",
     "@angular/core": "^18.2.5",
-    "@angular/forms": "^18.2.5",
+    "@angular/forms": "^18.2.6",
     "@angular/platform-browser": "^18.2.5",
     "@angular/platform-browser-dynamic": "^18.2.5",
     "@angular/router": "^18.2.5",
@@ -26,6 +26,8 @@
     "ng-gallery": "^11.0.0",
     "ng2-file-upload": "^7.0.1",
     "ngx-bootstrap": "^12.0.0",
+    "ngx-datepicker": "^0.0.0",
+    "ngx-daterangepicker-bootstrap": "^18.5.0",
     "ngx-spinner": "^17.0.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
