--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "ngx-datepicker": "^0.0.0",
     "ngx-daterangepicker-bootstrap": "^18.5.0",
     "ngx-spinner": "^17.0.0",
+    "ngx-timeago": "^3.0.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
