End of section 17

--- a/.hintrc
+++ b/.hintrc
@@ -25,6 +25,7 @@
         "button-name": "off"
       }
     ],
-    "axe/aria": "off"
+    "axe/aria": "off",
+    "detect-css-reflows/composite": "off"
   }
 }
