End of Section 18 with players updated

--- a/.hintrc
+++ b/.hintrc
@@ -26,6 +26,12 @@
       }
     ],
     "axe/aria": "off",
-    "detect-css-reflows/composite": "off"
+    "detect-css-reflows/composite": "off",
+    "axe/text-alternatives": [
+      "default",
+      {
+        "frame-title": "off"
+      }
+    ]
   }
 }
