--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^18.2.5",
     "@angular/platform-browser-dynamic": "^18.2.5",
     "@angular/router": "^18.2.5",
+    "@angular/youtube-player": "^20.0.2",
     "@microsoft/signalr": "^8.0.7",
     "bootstrap": "^5.3.3",
     "bootswatch": "^5.3.3",
