--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -28,5 +28,8 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+  "exclude": [
+    "src/app/testThis/testThis.routing/testThis.routing.module.ts"
+  ]
 }
