--- a/client/package.json
+++ b/client/package.json
@@ -38,8 +38,8 @@
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.15",
-    "@angular/cli": "^19.2.15",
+    "@angular/build": "^20.0.3",
+    "@angular/cli": "^20.0.3",
     "@angular/compiler-cli": "^20.0.4",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
@@ -48,7 +48,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.2"
+    "typescript": "~5.8.3"
   },
   "overrides": {
     "ngx-bootstrap": {
