--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=ag18.db"
+    "DefaultConnection": "Server=localhost,1433;Database=Ag18tedDB;User Id=SA;Password=Password@1;TrustServerCertificate=True"
   }
 }
