--- a/.github/workflows/main_tedrs-app-course.yml
+++ b/.github/workflows/main_tedrs-app-course.yml
@@ -24,7 +24,7 @@ jobs:
           node-version: '20'
 
       - name: Install Angular CLI
-        run: npm istall -g @angular/cli@18
+        run: npm install -g @angular/cli@18
 
       - name: Install deps and build angular app
         run: | 
