--- a/.github/workflows/main_tedrs-app-course.yml
+++ b/.github/workflows/main_tedrs-app-course.yml
@@ -24,7 +24,7 @@ jobs:
           node-version: '20'
 
       - name: Install Angular CLI
-        run: npm install -g @angular/cli@18
+        run: npm install -g @angular/cli@20
 
       - name: Install deps and build angular app
         run: | 
@@ -35,7 +35,7 @@ jobs:
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 'v8.0'
+          dotnet-version: 'v8.x'
 
       - name: Build with dotnet
         run: dotnet build --configuration Release
