--- a/.github/workflows/main_tedrs-app-course.yml
+++ b/.github/workflows/main_tedrs-app-course.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 'v8.x'
+          dotnet-version: 'v8.0'
 
       - name: Build with dotnet
         run: dotnet build --configuration Release
