--- a/.hintrc
+++ b/.hintrc
@@ -32,6 +32,14 @@
       {
         "frame-title": "off"
       }
+    ],
+    "compat-api/css": [
+      "default",
+      {
+        "ignore": [
+          "-webkit-text-size-adjust"
+        ]
+      }
     ]
   }
 }
