--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^20.0.4",
     "@angular/youtube-player": "^20.0.2",
     "@microsoft/signalr": "^8.0.7",
+    "@tailwindcss/postcss": "^4.1.11",
     "bootstrap": "^5.3.3",
     "bootswatch": "^5.3.3",
     "client": "file:",
@@ -34,6 +35,7 @@
     "ngx-timeago": "^3.0.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.1.11",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -43,6 +45,7 @@
     "@angular/cli": "^20.0.3",
     "@angular/compiler-cli": "^20.0.4",
     "@types/jasmine": "~5.1.0",
+    "daisyui": "^5.0.46",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
