Revert "Update of section 4"
This reverts commit 8fffcb876b0b919ccf44ae14966e5828a3fb3f66.

--- a/client/angular.json
+++ b/client/angular.json
@@ -5,12 +5,7 @@
   "projects": {
     "client": {
       "projectType": "application",
-      "schematics": {
-        "@schematics/angular:component": {
-          "skipTests": true,
-          "path": "src"
-        }
-      },
+      "schematics": {},
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
